# python-web-based-apps

./: .gitignore  README.md
E-Commerce-Website/: .gitignore  config.py  main.py  pyproject.toml
E-Commerce-Website/website/: __init__.py  auth.py  fake_product_info.py  forms.py  models.py  views.py
E-Commerce-Website/website/static/: card_style.css  modal_style.css  site.js  style.css
E-Commerce-Website/website/templates/: base.html  home.html  login.html  market.html  register.html
E-Commerce-Website/website/templates/includes/: modal.html
