[project]
name = "web-app-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.2.0",
    "faker>=37.4.2",
    "faker-commerce>=1.0.4",
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "requests>=2.32.4",
]
